$Id$
---------------------------------------------------------------------------

Version 0.3 (...)

- Moved WrappingLogFormatter to Grizzled API (grizzled.log module).
- Moved str2bool() function to Grizzled API (grizzled.misc module).

---------------------------------------------------------------------------
Version 0.2.3 (21 July, 2008)

- Fixed bug that caused sqlcmd to crash when displaying binary data.

---------------------------------------------------------------------------
Version 0.2.2 (18 July, 2008)

- Unicode-related changes to permit sqlcmd to handle databases with
  non-ASCII characters. Thanks to Stephane Matamontero for noting the problem
  and submitting a patch.
- Fixed a problem with history management and multiline commands.
- Documented "sqlcmd.history" module.
- Added --version (-v) command line option.

---------------------------------------------------------------------------
Version 0.2.1 (18 July, 2008)

- Now supports the ipython pyreadline module on Windows, allowing sqlcmd
  to work on Windows properly.
- Explicit support for ALTER statement, to permit table completion.

---------------------------------------------------------------------------
Version 0.2 (17 July, 2008)

- "@" is no longer an alias for ".load". It's too complicated to support.
- ".load" will now do file-name completion on its argument, including
  tilde expansion.
- Made more improvements to tab-completion, especially for dot (".") commands.
- Documented how extended (unrecognized) commands are handled.
- Fixed log handling.
- Some other internal cleanup.

---------------------------------------------------------------------------
Version 0.1.2 (17 July, 2008)

- Fixed parsing error with the "@" command.
- Dot (".") commands now show up properly in help.
- Added tab completion to various commands. For instance:
  * ".<TAB>" shows the "." commands
  * ".set <TAB>" shows the variables you can set
  * ".set variable <TAB>" shows the legal values for the variable